# ploc

./: .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: release.yml
ploc/: __init__.py  __main__.py  analysis.py  caching.py  cli.py  config.py  parsing.py  printing.py  type_defs.py  utils.py
